Fix - CSS: Bootstrap and Foundation were missing the empty row class to align text to the center

--- a/css/dataTables.foundation.scss
+++ b/css/dataTables.foundation.scss
@@ -10,6 +10,10 @@ table.dataTable {
 		-webkit-box-sizing: content-box;
 		-moz-box-sizing: content-box;
 		box-sizing: content-box;
+
+		&.dataTables_empty {
+			text-align: center;
+		}
 	}
 
 	// Style options for the table. Foundation provides its own, but it is also
